added nav section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <header id="header-content">
+        <nav class="nav-content">
+            <div class="logo">
+                <img src="assets/logo-navbar.png" alt="">
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="">Features</a></li>
+                    <li><a href="">How it's works</a></li>
+                    <li><a href="">why it's different</a></li>
+                </ul>
+            </div>
+            <div><button class="btn">Get Early access</button></div>
+        </nav>
+    </header>
 </body>
 </html>
