--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
             </div>
             <div><button class="btn">Get Early access</button></div>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <p class="banner-border">Early Access Now Open</p>
+            <h2>Structured thinking, not just note-taking.</h2>
+                <p>A private space to store notes, links, and learning summaries — designed to
+      <br>help you think clearly, connect ideas, and turn learning into long-term knowledge.
+
+</p>
+<div class="">
+    <button>Start building your vault</button>
+    <button>see how it works</button>
+
+</div>
+            </div>
+        </div>
     </header>
 </body>
 </html>
