added header section

--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
         <div class="banner">
             <div class="banner-content">
                 <p class="banner-border">Early Access Now Open</p>
-            <h2>Structured thinking, not just note-taking.</h2>
-                <p>A private space to store notes, links, and learning summaries — designed to
+            <h2>Structured thinking, <br><span class="banner-heading"> not just note-taking.</span></h2>
+                <p class="banner-pra">A private space to store notes, links, and learning summaries — designed to
       <br>help you think clearly, connect ideas, and turn learning into long-term knowledge.
 
 </p>
-<div class="">
-    <button>Start building your vault</button>
-    <button>see how it works</button>
+<div class="header-button">
+    <button class="btn1">Start building your vault <img src="assets/ArrowRight.png" alt=""></button>
+    <button class="btn2">see how it works</button>
 
 </div>
             </div>
