added content section

--- a/index.html
+++ b/index.html
@@ -41,5 +41,23 @@
             </div>
         </div>
     </header>
+    <section id="content-container">
+        <div class="image-section">
+            <img src="assets/knowledge.png" alt="" srcset="">
+        </div>
+        <div class="content-section">
+            <p class="connect-pra1">The Solution</p>
+            <h2>Your second brain, <br> structured by design.</h2>
+            <p class="content-pra2">Personal Knowledge Vault isn't another note-taking app. z <br>It's a thinking environment where every note, link, and summary <br>becomes part of an interconnected web of understanding.
+
+            </p>
+            <ul>
+                <li><a href="">Capture ideas with structure built-in from day one</a></li>
+                <li><a href="">Connect related concepts automatically as you write</a></li>
+                <li><a href="">Build lasting knowledge through reflection prompts</a></li>
+                <li><a href="">Find anything instantly with semantic search</a></li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
