add card section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,36 @@
             </div>
         </div>
     </header>
+    <section id="card-container">
+       <div class="card-con-content">
+         <h2>Notes don't fail, Structure does.</h2>
+        <p>You're not bad at learning. Your tools just weren't built for how knowledge actually works.
+
+        </p>
+       </div>
+        <div class="card-section">
+            <div class="car-content">
+                <img src="assets/Vector.png" alt="">
+                <h4>Scattered notes</h4>
+                <p>Your ideas live in 10 different apps, none of them connected.</p>
+            </div>
+            <div class="car-content">
+                <img src="assets/Bookmarks.png" alt="">
+                <h4>Bookmark overload</h4>
+                <p>Hundreds of saved links you'll never revisit or remember.</p>
+            </div>
+            <div class="car-content">
+                <img src="assets/Brain.png" alt="">
+                <h4>No idea connections</h4>
+                <p>Insights stay isolated, never building into bigger understanding.</p>
+            </div>
+            <div class="car-content">
+                <img src="assets/Info.png" alt="">
+                <h4>Forgetting what you learned</h4>
+                <p>Knowledge fades because there's no system to retain it.</p>
+            </div>
+        </div>
+    </section>
     <section id="content-container">
         <div class="image-section">
             <img src="assets/knowledge.png" alt="" srcset="">
@@ -52,10 +82,10 @@
 
             </p>
             <ul>
-                <li><a href="">Capture ideas with structure built-in from day one</a></li>
-                <li><a href="">Connect related concepts automatically as you write</a></li>
-                <li><a href="">Build lasting knowledge through reflection prompts</a></li>
-                <li><a href="">Find anything instantly with semantic search</a></li>
+                <li><a href=""><img src="assets/CheckCircle.png" alt="">Capture ideas with structure built-in from day one</a></li>
+                <li><a href=""><img src="assets/CheckCircle.png" alt="">Connect related concepts automatically as you write</a></li>
+                <li><a href=""><img src="assets/CheckCircle.png" alt="">Build lasting knowledge through reflection prompts</a></li>
+                <li><a href=""><img src="assets/CheckCircle.png" alt="">Find anything instantly with semantic search</a></li>
             </ul>
         </div>
     </section>
