added early section

--- a/index.html
+++ b/index.html
@@ -89,5 +89,16 @@
             </ul>
         </div>
     </section>
+    <section id="early-container">
+        <div class="early-section">
+            <h2>Ready to think more clearly?</h2>
+            <p>Join thousands of learners who are building their personal knowledge vaults.
+
+            </p>
+            <p>Start free, no credit card required.</p>
+            <button class="btn">Get Early Access <img src="assets/ArrowRight.png" alt=""></button>
+            <p>Free during early access • No credit card needed</p>
+        </div>
+    </section>
 </body>
 </html>
