--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
         </div>
     </section>
     <footer id="footer-continer">
-        <div class="footer-image">
+      <div class="footer-content">
+          <div class="footer-image">
             <img src="assets/logo-footer.png" alt="">
         </div>
         <div class="social-link">
@@ -113,6 +114,8 @@
                 <li><a href=""><i class="fa-brands fa-twitter"></i></a></li>
             </ul>
         </div>
+      </div>
+        <p>© 2026 Personal Knowledge Vault. All rights reserved.</p>
     </footer>
 </body>
 </html>
