adde some changess

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="">why it's different</a></li>
                 </ul>
             </div>
-            <div><button class="btn">Get Early access</button></div>
+            <div><button class="btn">Get Early access <img src="assets/ArrowRight.png" alt=""></button></div>
         </nav>
         <div class="banner">
             <div class="banner-content">
