added some changes

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </nav>
         <div class="banner">
             <div class="banner-content">
-                <p class="banner-border">Early Access Now Open</p>
+                <p class="banner-border"><i class="fa-solid fa-droplet"></i>Early Access Now Open</p>
             <h2>Structured thinking, <br><span class="banner-heading"> not just note-taking.</span></h2>
                 <p class="banner-pra">A private space to store notes, links, and learning summaries — designed to
       <br>help you think clearly, connect ideas, and turn learning into long-term knowledge.
